--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@
 /DentalSystem.Models/bin
 /DentalSystem.Services/obj
 /DentalSystem.Services/bin
-/DentalSystem.Web
+/DentalSystem.Web/obj
+/DentalSystem.Web/bin
