--- a/DentalSystem.Console/DentalSystem.Console.csproj
+++ b/DentalSystem.Console/DentalSystem.Console.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyVersion>1.18212.31.0</AssemblyVersion>
+    <FileVersion>1.18212.31.0</FileVersion>
   </PropertyGroup>
 
 </Project>
