added ADMINISTRATOR Area added Doctors Table only Admin is allowed to create doctors. Doctors form accepts files which is stored in the DB Added Service Layer.

--- a/DentalSystem.Web/appsettings.json
+++ b/DentalSystem.Web/appsettings.json
@@ -13,5 +13,10 @@
       "ClientSecret": "oZzpp8IrXaIayY_9AdOnoznP"
     }
   },
+  "PowerUser" : {
+    "Username": "mitko100",
+    "Email" :  "dimitar.radenkov1@gmail.com",
+    "Password" : "admin123"
+  },
   "AllowedHosts": "*"
 }
