--- a/DentalSystem.Services/DentalSystem.Services.csproj
+++ b/DentalSystem.Services/DentalSystem.Services.csproj
@@ -2,8 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyVersion>1.18212.31.0</AssemblyVersion>
-    <FileVersion>1.18212.31.0</FileVersion>
+    <AssemblyVersion>1.18213.1.0</AssemblyVersion>
+    <FileVersion>1.18213.1.0</FileVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DentalSystem.Data\DentalSystem.Data.csproj" />
+    <ProjectReference Include="..\DentalSystem.Models\DentalSystem.Models.csproj" />
+  </ItemGroup>
 
 </Project>
