--- a/DentalSystem.Web/DentalSystem.Web.csproj
+++ b/DentalSystem.Web/DentalSystem.Web.csproj
@@ -3,11 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <UserSecretsId>aspnet-DentalSystem.Web-DCEB0068-7005-4CB2-9495-E5DA0069E996</UserSecretsId>
-    <AssemblyVersion>1.18212.31.0</AssemblyVersion>
-    <FileVersion>1.18212.31.0</FileVersion>
+    <AssemblyVersion>1.18213.1.0</AssemblyVersion>
+    <FileVersion>1.18213.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All" />
   </ItemGroup>
@@ -15,6 +16,20 @@
   <ItemGroup>
     <ProjectReference Include="..\DentalSystem.Data\DentalSystem.Data.csproj" />
     <ProjectReference Include="..\DentalSystem.Models\DentalSystem.Models.csproj" />
+    <ProjectReference Include="..\DentalSystem.Services\DentalSystem.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Areas\Administrator\Views\_ViewImports.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\Identity\Pages\_ViewStart.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Administrator\Views\Doctors\" />
   </ItemGroup>
 
 </Project>
