Constants are moved to DentalSystem.Common When Admin added a doctor it give him a proper role

--- a/DentalSystem.Services/DentalSystem.Services.csproj
+++ b/DentalSystem.Services/DentalSystem.Services.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DentalSystem.Common\DentalSystem.Common.csproj" />
     <ProjectReference Include="..\DentalSystem.Data\DentalSystem.Data.csproj" />
     <ProjectReference Include="..\DentalSystem.Models\DentalSystem.Models.csproj" />
   </ItemGroup>
