--- a/DentalSystem.Data/DentalSystem.Data.csproj
+++ b/DentalSystem.Data/DentalSystem.Data.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyVersion>1.18215.3.0</AssemblyVersion>
-    <FileVersion>1.18215.3.0</FileVersion>
+    <AssemblyVersion>1.18218.6.0</AssemblyVersion>
+    <FileVersion>1.18218.6.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Faker.NETCore" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.1.2" />
