--- a/DentalSystem.Web/DentalSystem.Web.csproj
+++ b/DentalSystem.Web/DentalSystem.Web.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <UserSecretsId>aspnet-DentalSystem.Web-DCEB0068-7005-4CB2-9495-E5DA0069E996</UserSecretsId>
-    <AssemblyVersion>1.18220.8.0</AssemblyVersion>
-    <FileVersion>1.18220.8.0</FileVersion>
+    <AssemblyVersion>1.18221.9.0</AssemblyVersion>
+    <FileVersion>1.18221.9.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Folder Include="Areas\Administrator\Views\Doctors\" />
     <Folder Include="Areas\Office\Appointments\" />
+    <Folder Include="Views\Shared\DisplayTemplates\" />
   </ItemGroup>
 
 </Project>
