--- a/DentalSystem.Console/DentalSystem.Console.csproj
+++ b/DentalSystem.Console/DentalSystem.Console.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="7.0.1" />
+    <PackageReference Include="Twilio" Version="5.16.0" />
   </ItemGroup>
 
   <ItemGroup>
